<resources>
    <string name="app_name">FirebaseChat</string>

    <!--SignPage-->
    <string name="sign_start_first_page">Start Copy Naver Line...</string>
    <string name="sign_signin">Sign in</string>
    <string name="sign_signup">Sign up</string>
    <string name="sign_sign_facebook">Log in with Facebook</string>
    <string name="sign_sign_google">Log in with Google</string>
    <string name="sign_phone_number">Phone Number(010-****-****)</string>
    <string name="sign_email">Email Address</string>
    <string name="sign_password">Password</string>
    <string name="sign_passwordRe">Password Repeat</string>
    <string name="sign_name">Name (or NickName)</string>
    <string name="sign_Authnumber">Authentication number (1111)</string>
    <string name="sign_next">Next</string>

    <!--Notice-->
    <string name="alert_notice">Notice</string>
    <string name="alert_ok">OK</string>
    <string name="alert_emailMsg">sending email is complete, please check your email</string>
    <string name="alert_emailMsgFail">sending email is false, please one more click button</string>
    <string name="alert_checkEmail">please check your email</string>
    <string name="alert_differentauth">id or password is not correct</string>
    <string name="alert_fail">error occur</string>
    <string name="alert_overlapPhone">phone number is overlapped</string>

    <!--menu-->
    <string name="menu_addFriend">Add Friend</string>
    <string name="menu_search">Search</string>
    <string name="menu_editFriend">Edit Friend</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_addRoom">Add Room</string>
    <string name="menu_editMsg">Edit Message</string>
    <string name="menu_editArg">Rearrange Room</string>
    <string name="menu_call">Call</string>
    <string name="menu_invite">Invite Friend</string>
    <string name="menu_outRoom">Leave Room</string>

    <!-- chat -->
    <string name="chat_startMsg">start Chatting</string>
</resources>
